--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Jersey+15&display=swap');
+
 .App {
   text-align: center;
+  font-family: "Jersey 15", sans-serif;
+  font-weight: bold;
 }
 
 .App-logo {
